--- a/Timer-Weather/Timer-Weather/Base.lproj/Main.storyboard
+++ b/Timer-Weather/Timer-Weather/Base.lproj/Main.storyboard
@@ -674,8 +674,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Background" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wDG-ci-rfw">
-                                                    <rect key="frame" x="26" y="11.000000000000002" width="92" height="20.666666666666671"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Background Color" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wDG-ci-rfw">
+                                                    <rect key="frame" x="26" y="11.000000000000002" width="137.66666666666666" height="20.666666666666671"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
@@ -793,7 +793,7 @@
                                                     <rect key="frame" x="337" y="17" width="13" height="10"/>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="upper-dial" translatesAutoresizingMaskIntoConstraints="NO" id="WwY-sM-xDf">
-                                                    <rect key="frame" x="10" y="0.0" width="76" height="43.666666666666664"/>
+                                                    <rect key="frame" x="10" y="10" width="76" height="24"/>
                                                 </imageView>
                                                 <view alpha="0.25" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KRH-KF-qTZ">
                                                     <rect key="frame" x="0.0" y="43" width="375" height="1"/>
@@ -805,12 +805,12 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="WwY-sM-xDf" secondAttribute="bottom" id="Dmw-P8-Xn6"/>
+                                                <constraint firstAttribute="bottom" secondItem="WwY-sM-xDf" secondAttribute="bottom" constant="10" id="Dmw-P8-Xn6"/>
                                                 <constraint firstItem="EvC-Hb-4P4" firstAttribute="centerY" secondItem="o50-aI-DXQ" secondAttribute="centerY" id="IVS-cl-lqu"/>
                                                 <constraint firstAttribute="trailing" secondItem="KRH-KF-qTZ" secondAttribute="trailing" id="OMq-Xg-9aJ"/>
                                                 <constraint firstItem="WwY-sM-xDf" firstAttribute="leading" secondItem="o50-aI-DXQ" secondAttribute="leading" constant="10" id="Xts-NO-DXs"/>
                                                 <constraint firstAttribute="bottom" secondItem="KRH-KF-qTZ" secondAttribute="bottom" id="aat-Tt-PI3"/>
-                                                <constraint firstItem="WwY-sM-xDf" firstAttribute="top" secondItem="o50-aI-DXQ" secondAttribute="top" id="akg-3e-B5g"/>
+                                                <constraint firstItem="WwY-sM-xDf" firstAttribute="top" secondItem="o50-aI-DXQ" secondAttribute="top" constant="10" id="akg-3e-B5g"/>
                                                 <constraint firstItem="EvC-Hb-4P4" firstAttribute="leading" secondItem="o50-aI-DXQ" secondAttribute="leadingMargin" constant="10" id="eUV-Za-Pgl"/>
                                                 <constraint firstItem="Ssy-UQ-cFF" firstAttribute="centerY" secondItem="o50-aI-DXQ" secondAttribute="centerY" id="lxY-SI-o0c"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="Ssy-UQ-cFF" secondAttribute="trailing" constant="10" id="pWH-HJ-cIx"/>
